<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/message_margin"
        android:layout_marginVertical="@dimen/message_margin"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/messageAvatar"
                android:layout_width="@dimen/message_avatarSize"
                android:layout_height="@dimen/message_avatarSize"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/message_avatarMarginRight" />

            <TextView
                android:id="@+id/messageSenderContainer"
                android:text="@string/message_username_placeholder"
                android:textStyle="bold"
                android:layout_toRightOf="@id/messageAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/messageTextContainer"
                android:text="@string/message_text_placeholder"
                android:layout_below="@id/messageSenderContainer"
                android:layout_toRightOf="@id/messageAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/messageSentTime"
                android:text="@string/message_date_placeholder"
                android:textSize="@dimen/text_date"
                android:layout_alignParentRight="true"
                android:textAlignment="viewEnd"
                android:layout_below="@id/messageTextContainer"
                android:layout_toRightOf="@id/messageAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>